1.2.2 -> 1.2.3
	- fixed memset() in help message generation (Dale Hawkins)
	- added extern "C" stuff to popt.h for C++ compilers (Dale Hawkins)

1.2.1 -> 1.2.2
	- fixed bug in chaind alias happens which seems to have only
	  affected --triggers in rpm
	- added POPT_ARG_VAL
	- popt.3 installed by default

1.2 -> 1.2.1
	- added POPT_ARG_INTL_DOMAIN (Elliot Lee)
	- updated Makefile's to be more GNUish (Elliot Lee)

1.1 -> 1.2
	- added popt.3 man page (Robert Lynch)
	- don't use mmap anymore (its lack of portability isn't worth the
	  trouble)
	- added test script
	- added support for exec
	- removed support for *_POPT_ALIASES env variable -- it was a bad
	  idea
	- reorganized into multiple source files
	- added automatic help generation, POPT_AUTOHELP
	- added table callbacks
	- added table inclusion
	- updated man page for new features
	- added test scripts

1.0 -> 1.1
	- moved to autoconf (Fred Fish)
	- added STRERROR replacement (Norbert Warmuth)
	- added const keywords (Bruce Perens)